--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -249,10 +249,10 @@ runs:
     env:
       GITHUB_MATRICS_PERSONAL_ACCESS_TOKEN: ${{ inputs.gh-pat }}
       NX_NO_CLOUD: ${{ inputs.use-nx-cloud == 'false' }}
+      NODE_OPTIONS: --max-old-space-size=${{ inputs.node-js-max-memory }}
     run: |
       nx run-many --verbose ${{ inputs.args }} --target='${{ inputs.target }}' \
         --maxParallel=1 \
         --output-style=stream \
         --no-cloud \
-        --no-cache \
-         --max_old_space_size=${{ inputs.node-js-max-memory }} 
+        --no-cache 
