DO-289 | optimization flags

--- a/nx-affected/action.yaml
+++ b/nx-affected/action.yaml
@@ -255,4 +255,6 @@ runs:
         --maxParallel=1 \
         --output-style=stream \
         --no-cloud \
-        --no-cache 
+        --no-cache \
+        --optimize-for-size \
+        --gc_interval=100
